--- a/static/styles.css
+++ b/static/styles.css
@@ -1,4 +1,4 @@
-code[class*=language-],pre[class*=language-]{color:#000;background:0 0;text-shadow:0 1px #fff;font-family:Consolas,Monaco,'Andale Mono','Ubuntu Mono',monospace;font-size:1em;text-align:left;white-space:pre;word-spacing:normal;word-break:normal;word-wrap:normal;line-height:1.5;-moz-tab-size:4;-o-tab-size:4;tab-size:4;-webkit-hyphens:none;-moz-hyphens:none;-ms-hyphens:none;hyphens:none}code[class*=language-] ::-moz-selection,code[class*=language-]::-moz-selection,pre[class*=language-] ::-moz-selection,pre[class*=language-]::-moz-selection{text-shadow:none;background:#b3d4fc}code[class*=language-] ::selection,code[class*=language-]::selection,pre[class*=language-] ::selection,pre[class*=language-]::selection{text-shadow:none;background:#b3d4fc}@media print{code[class*=language-],pre[class*=language-]{text-shadow:none}}pre[class*=language-]{padding:1em;margin:.5em 0;overflow:auto}:not(pre)>code[class*=language-],pre[class*=language-]{background:#f5f2f0}:not(pre)>code[class*=language-]{padding:.1em;border-radius:.3em;white-space:normal}.token.cdata,.token.comment,.token.doctype,.token.prolog{color:#708090}.token.punctuation{color:#999}.namespace{opacity:.7}.token.boolean,.token.constant,.token.deleted,.token.number,.token.property,.token.symbol,.token.tag{color:#905}.token.attr-name,.token.builtin,.token.char,.token.inserted,.token.selector,.token.string{color:#690}.language-css .token.string,.style .token.string,.token.entity,.token.operator,.token.url{color:#9a6e3a;background:hsla(0,0%,100%,.5)}.token.atrule,.token.attr-value,.token.keyword{color:#07a}.token.class-name,.token.function{color:#dd4a68}.token.important,.token.regex,.token.variable{color:#e90}.token.bold,.token.important{font-weight:700}.token.italic{font-style:italic}.token.entity{cursor:help}
+/* code[class*=language-],pre[class*=language-]{color:#000;background:0 0;text-shadow:0 1px #fff;font-family:Consolas,Monaco,'Andale Mono','Ubuntu Mono',monospace;font-size:1em;text-align:left;white-space:pre;word-spacing:normal;word-break:normal;word-wrap:normal;line-height:1.5;-moz-tab-size:4;-o-tab-size:4;tab-size:4;-webkit-hyphens:none;-moz-hyphens:none;-ms-hyphens:none;hyphens:none}code[class*=language-] ::-moz-selection,code[class*=language-]::-moz-selection,pre[class*=language-] ::-moz-selection,pre[class*=language-]::-moz-selection{text-shadow:none;background:#b3d4fc}code[class*=language-] ::selection,code[class*=language-]::selection,pre[class*=language-] ::selection,pre[class*=language-]::selection{text-shadow:none;background:#b3d4fc}@media print{code[class*=language-],pre[class*=language-]{text-shadow:none}}pre[class*=language-]{padding:1em;margin:.5em 0;overflow:auto}:not(pre)>code[class*=language-],pre[class*=language-]{background:#f5f2f0}:not(pre)>code[class*=language-]{padding:.1em;border-radius:.3em;white-space:normal}.token.cdata,.token.comment,.token.doctype,.token.prolog{color:#708090}.token.punctuation{color:#999}.namespace{opacity:.7}.token.boolean,.token.constant,.token.deleted,.token.number,.token.property,.token.symbol,.token.tag{color:#905}.token.attr-name,.token.builtin,.token.char,.token.inserted,.token.selector,.token.string{color:#690}.language-css .token.string,.style .token.string,.token.entity,.token.operator,.token.url{color:#9a6e3a;background:hsla(0,0%,100%,.5)}.token.atrule,.token.attr-value,.token.keyword{color:#07a}.token.class-name,.token.function{color:#dd4a68}.token.important,.token.regex,.token.variable{color:#e90}.token.bold,.token.important{font-weight:700}.token.italic{font-style:italic}.token.entity{cursor:help}
 
 pre.language-js {
   background: #f7f7f7 !important;
@@ -6,7 +6,78 @@ pre.language-js {
 }
 .code.language-js {
   font-size: 13px;
+} */
+
+pre.language-js {
+  color: #fff;
+  background: none;
+  font-size: 1em;
+  text-align: left;
+  white-space: pre;
+  word-spacing: normal;
+  word-break: normal;
+  word-wrap: normal;
+  line-height: 1.5;
+  -moz-tab-size: 4;
+  -o-tab-size: 4;
+  tab-size: 4;
+  -webkit-hyphens: none;
+  -ms-hyphens: none;
+  hyphens: none;
+  background: #3c3c64;
+
+  flex-grow: 1;
+  display: block;
+  text-shadow: none;
+  padding-right: 15px;
+  font-family: Roboto Mono,sans-serif;
+  font-size: 14px;
+  line-height: 24px;
+  color: #e2e2e2;
+
+  padding: 15px 20px;
+  -webkit-font-smoothing: antialiased;
 }
+
+
+.token.keyword {
+  color: #00cdff
+}
+
+.token.property {
+  color: #fff
+}
+
+.token.boolean,.token.string {
+  color: #e995ff
+}
+
+.token.number {
+  color: #c3e88d
+}
+
+.token.operator {
+  background-color: transparent!important;
+  color: #b5b5b5!important
+}
+
+.token.constant {
+  color: #00cdff!important
+}
+
+.token.function {
+  color: #fff
+}
+
+.token.punctuation {
+  color: #fff!important
+}
+
+
+
+
+
+
 
 body {
   margin: 0;
@@ -23,7 +94,7 @@ h1, h2, h3, p, ul {
 }
 
 a {
-  color: #106ad5;
+  color: #7c64ff;
 }
 
 h2 {
@@ -36,7 +107,7 @@ a:not(:hover) {
 }
 
 .text-blue {
-  color: #218db3;
+  color: #7c64ff;
 }
 
 .text-yellow {
@@ -75,12 +146,12 @@ a:not(:hover) {
 }
 
 .logo svg {
-  width: 170px;
+  width: 120px;
   height: auto;
 }
 
 .logo svg path {
-  fill: #4AAED0;
+  fill: #7c64ff;
 }
 
 @media (min-width: 600px) {
@@ -151,13 +222,13 @@ a:not(:hover) {
 
 .header-icons li a {
   padding: 10px;
-  color: #4aaed0;
+  color: #7c64ff;
   transition: 0.2s;
   display: block;
 }
 
 .header-icons li a:hover {
-  color: #30829e;
+  color: #595c87;
 }
 
 .header-icons li a:active {
