--- a/static/styles.css
+++ b/static/styles.css
@@ -1,12 +1,33 @@
-/* code[class*=language-],pre[class*=language-]{color:#000;background:0 0;text-shadow:0 1px #fff;font-family:Consolas,Monaco,'Andale Mono','Ubuntu Mono',monospace;font-size:1em;text-align:left;white-space:pre;word-spacing:normal;word-break:normal;word-wrap:normal;line-height:1.5;-moz-tab-size:4;-o-tab-size:4;tab-size:4;-webkit-hyphens:none;-moz-hyphens:none;-ms-hyphens:none;hyphens:none}code[class*=language-] ::-moz-selection,code[class*=language-]::-moz-selection,pre[class*=language-] ::-moz-selection,pre[class*=language-]::-moz-selection{text-shadow:none;background:#b3d4fc}code[class*=language-] ::selection,code[class*=language-]::selection,pre[class*=language-] ::selection,pre[class*=language-]::selection{text-shadow:none;background:#b3d4fc}@media print{code[class*=language-],pre[class*=language-]{text-shadow:none}}pre[class*=language-]{padding:1em;margin:.5em 0;overflow:auto}:not(pre)>code[class*=language-],pre[class*=language-]{background:#f5f2f0}:not(pre)>code[class*=language-]{padding:.1em;border-radius:.3em;white-space:normal}.token.cdata,.token.comment,.token.doctype,.token.prolog{color:#708090}.token.punctuation{color:#999}.namespace{opacity:.7}.token.boolean,.token.constant,.token.deleted,.token.number,.token.property,.token.symbol,.token.tag{color:#905}.token.attr-name,.token.builtin,.token.char,.token.inserted,.token.selector,.token.string{color:#690}.language-css .token.string,.style .token.string,.token.entity,.token.operator,.token.url{color:#9a6e3a;background:hsla(0,0%,100%,.5)}.token.atrule,.token.attr-value,.token.keyword{color:#07a}.token.class-name,.token.function{color:#dd4a68}.token.important,.token.regex,.token.variable{color:#e90}.token.bold,.token.important{font-weight:700}.token.italic{font-style:italic}.token.entity{cursor:help}
-
-pre.language-js {
-  background: #f7f7f7 !important;
-  margin-bottom: 30px;
+@media (min-width: 576px) {
+  .container {
+    max-width: 540px;
+    padding-right: 0;
+    padding-left: 0;
+  }
 }
-.code.language-js {
-  font-size: 13px;
-} */
+
+@media (min-width: 768px) {
+  .container {
+    max-width: 720px;
+  }
+}
+
+@media (min-width: 992px) {
+  .container {
+    max-width: 960px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .container {
+    max-width: 1175px;
+  }
+}
+
+.wrapper {
+  background: #f9f8fc;
+  padding: 20px 0;
+}
 
 pre.language-js {
   color: #fff;
@@ -26,11 +47,10 @@ pre.language-js {
   hyphens: none;
   background: #3c3c64;
 
-  flex-grow: 1;
   display: block;
   text-shadow: none;
   padding-right: 15px;
-  font-family: Roboto Mono,sans-serif;
+  font-family: Roboto Mono, sans-serif;
   font-size: 14px;
   line-height: 24px;
   color: #e2e2e2;
@@ -39,57 +59,59 @@ pre.language-js {
   -webkit-font-smoothing: antialiased;
 }
 
-
 .token.keyword {
-  color: #00cdff
+  color: #00cdff;
 }
 
 .token.property {
-  color: #fff
+  color: #fff;
 }
 
-.token.boolean,.token.string {
-  color: #e995ff
+.token.boolean,
+.token.string {
+  color: #e995ff;
 }
 
 .token.number {
-  color: #c3e88d
+  color: #c3e88d;
 }
 
 .token.operator {
-  background-color: transparent!important;
-  color: #b5b5b5!important
+  background-color: transparent !important;
+  color: #b5b5b5 !important;
 }
 
 .token.constant {
-  color: #00cdff!important
+  color: #00cdff !important;
 }
 
 .token.function {
-  color: #fff
+  color: #fff;
 }
 
 .token.punctuation {
-  color: #fff!important
+  color: #fff !important;
 }
-
-
-
-
-
-
 
 body {
   margin: 0;
-  font-family: -apple-system,Whitney,BlinkMacSystemFont,segoe ui,Roboto,Helvetica,Arial,sans-serif,apple color emoji,segoe ui emoji,segoe ui symbol;
+  font-family: -apple-system, Whitney, BlinkMacSystemFont, segoe ui, Roboto,
+    Helvetica, Arial, sans-serif, apple color emoji, segoe ui emoji,
+    segoe ui symbol;
   color: #444;
 }
 
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
 }
 
-h1, h2, h3, p, ul {
+h1,
+h2,
+h3,
+p,
+ul {
   margin-top: 0;
 }
 
@@ -116,10 +138,6 @@ a:not(:hover) {
 
 .page {
   margin: 0 auto 50px;
-  max-width: 960px;
-  padding-left: 20px;
-  padding-right: 20px;
-  padding-top: 50px;
 }
 
 .page-section {
@@ -209,7 +227,6 @@ a:not(:hover) {
   min-width: 120px;
 }
 
-
 .header-icons {
   position: absolute;
   top: 0;
@@ -233,4 +250,11 @@ a:not(:hover) {
 
 .header-icons li a:active {
   transform: scale(0.9);
+}
+
+.page-section pre.language-js {
+  overflow: auto;
+  word-wrap: normal;
+  white-space: pre;
+  max-width: 100%;
 }
