--- a/static/styles.css
+++ b/static/styles.css
@@ -219,7 +219,6 @@ a:not(:hover) {
 
 .modules-list {
   list-style: none;
-  padding-left: 0;
   border-top: 1px solid #e6e6e6;
   padding: 10px 0;
   border-bottom: 1px solid #e6e6e6;
@@ -286,11 +285,12 @@ a {
   border-bottom: 1px solid rgba(125,100,255,0);
   transition: all .3s;
 }
-
+a:hover {
+  text-decoration: none;
+}
 a:not([class=no-hover]):hover {
   color: #7d64ff;
   border-bottom: 1px solid rgba(125,100,255,.5);
-  text-decoration: none;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -302,4 +302,26 @@ h1, h2, h3, h4, h5, h6 {
 
 code {
   font-family: 'Roboto Mono',SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
+}
+
+.code-toolbar {
+  position: relative;
+}
+
+.code-toolbar button {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  padding: 3px 5px 2px 6px;
+  background-color: #5a5c87;
+  border-radius: 2px;
+  height: 20px;
+  border: none;
+  outline: none;
+  font-weight: 600;
+  line-height: normal;
+  font-size: 10px;
+  color: #fff;
+  text-transform: uppercase;
+  cursor: pointer;
 }
